--- a/media.html
+++ b/media.html
@@ -25,7 +25,7 @@
             </p>
             <div class="cta-row">
               <a class="btn btn-primary btn-lg" href="mailto:info@drelaineloo.com?subject=Media%20Kit%20Request">Download Media Kit</a>
-              <a class="btn btn-ghost" href="invited_speaking.html">Invite to Speak</a>
+              <a class="btn btn-ghost" href="/invited_speaking">Invite to Speak</a>
             </div>
           </div>
           <figure class="hero-figure" aria-label="On stage and in media">
@@ -174,4 +174,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
