--- a/connect.html
+++ b/connect.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="page-connect" data-page="connect">
     <a class="skip-link" href="#main">Skip to main content</a>
 
     <div data-include="partials/header.html"></div>
