--- a/about_me.html
+++ b/about_me.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="page-about" data-page="about">
     <a class="skip-link" href="#main">Skip to main content</a>
 
     <div data-include="partials/header.html"></div>
