--- a/invited_speaking.html
+++ b/invited_speaking.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="page-speaking" data-page="speaking">
     <a class="skip-link" href="#main">Skip to main content</a>
 
     <div data-include="partials/header.html"></div>
