--- a/media.html
+++ b/media.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
   </head>
-  <body>
+  <body class="page-media" data-page="media">
     <a class="skip-link" href="#main">Skip to main content</a>
 
     <div data-include="partials/header.html"></div>
