--- a/invited_speaking.html
+++ b/invited_speaking.html
@@ -31,13 +31,31 @@
               courage to act on it.
             </p>
             <div class="cta-row">
-              <button id="open-booking-3" class="btn btn-primary btn-lg" type="button">Book Dr. Elaine for Your Event</button>
-              <a class="btn btn-ghost" href="https://www.facebook.com/drelaineloo/posts/pfbid06seg2z9XY6SxjXYano6xcR86Pss7M1iMf6csJi1scd7vAD9dCkzL6wYhbsQEBfTBl" target="_blank" rel="noopener">See Stage Moment</a>
+              <button
+                id="open-booking-3"
+                class="btn btn-primary btn-lg"
+                type="button"
+              >
+                Book Dr. Elaine for Your Event
+              </button>
+              <a
+                class="btn btn-ghost"
+                href="https://www.facebook.com/drelaineloo/posts/pfbid06seg2z9XY6SxjXYano6xcR86Pss7M1iMf6csJi1scd7vAD9dCkzL6wYhbsQEBfTBl"
+                target="_blank"
+                rel="noopener"
+                >See Stage Moment</a
+              >
             </div>
           </div>
           <figure class="hero-figure">
-            <img src="assets/hero-stage.jpg" alt="Dr. Elaine speaking on a wide stage with audience leaning in" />
-            <figcaption class="subtitle" style="margin-top:.5rem">“From research to resonance — insights that move people to action.”</figcaption>
+            <img
+              src="assets/images/audience_speaking.jpg"
+              alt="Dr. Elaine speaking on a wide stage with audience leaning in"
+            />
+            <figcaption class="subtitle" style="margin-top: 0.5rem">
+              “From research to resonance — insights that move people to
+              action.”
+            </figcaption>
           </figure>
         </div>
       </section>
@@ -48,72 +66,128 @@
         <div class="hl-grid">
           <article class="hl-card">
             <figure class="hl-fig">
-              <img src="assets/ph1.jpg" alt="Speaking at Global Education Summit 2024 in India" loading="lazy" />
+              <img
+                src="assets/ph1.jpg"
+                alt="Speaking at Global Education Summit 2024 in India"
+                loading="lazy"
+              />
             </figure>
             <div class="hl-body">
               <h3>Global Education Summit 2024 — India</h3>
-              <p class="muted">Addressed more than 30 university chancellors and vice-chancellors on “Beyond IQ – Redefining Education with the 5Q Framework™.” The session reimagined how universities can integrate emotional, adaptive, and social quotients alongside cognitive skills.</p>
-              <p class="pill" aria-label="Caption">Shaping education with leaders of higher learning.</p>
+              <p class="muted">
+                Addressed more than 30 university chancellors and
+                vice-chancellors on “Beyond IQ – Redefining Education with the
+                5Q Framework™.” The session reimagined how universities can
+                integrate emotional, adaptive, and social quotients alongside
+                cognitive skills.
+              </p>
+              <p class="pill" aria-label="Caption">
+                Shaping education with leaders of higher learning.
+              </p>
             </div>
           </article>
 
           <article class="hl-card">
             <figure class="hl-fig">
-              <img src="assets/ph2.jpg" alt="International Symposium on Creative Education 2025 in Finland" loading="lazy" />
+              <img
+                src="assets/ph2.jpg"
+                alt="International Symposium on Creative Education 2025 in Finland"
+                loading="lazy"
+              />
             </figure>
             <div class="hl-body">
-              <h3>International Symposium on Creative Education 2025 — Finland</h3>
-              <p class="muted">Presented “Illuminating the Inner Child Through Creative Education” to international educators and policymakers. Shared research-driven ways to weave play, creativity, and emotional literacy into teacher and parental education.</p>
-              <p class="pill" aria-label="Caption">We deserve to play even as grown up.</p>
+              <h3>
+                International Symposium on Creative Education 2025 — Finland
+              </h3>
+              <p class="muted">
+                Presented “Illuminating the Inner Child Through Creative
+                Education” to international educators and policymakers. Shared
+                research-driven ways to weave play, creativity, and emotional
+                literacy into teacher and parental education.
+              </p>
+              <p class="pill" aria-label="Caption">
+                We deserve to play even as grown up.
+              </p>
             </div>
           </article>
 
           <article class="hl-card">
             <figure class="hl-fig">
-              <img src="assets/ph3.jpg" alt="World Council for Psychotherapy Conference 2025 in Austria" loading="lazy" />
+              <img
+                src="assets/ph3.jpg"
+                alt="World Council for Psychotherapy Conference 2025 in Austria"
+                loading="lazy"
+              />
             </figure>
             <div class="hl-body">
               <h3>World Council for Psychotherapy Conference 2025 — Austria</h3>
-              <p class="muted">Delivered “You Don’t Have to Be Broken to Grow,” reframing resilience and polarity in life. Inspired psychotherapy leaders and mental health advocates from around the world.</p>
-              <p class="pill" aria-label="Caption">Voicing new perspectives for global mental health.</p>
+              <p class="muted">
+                Delivered “You Don’t Have to Be Broken to Grow,” reframing
+                resilience and polarity in life. Inspired psychotherapy leaders
+                and mental health advocates from around the world.
+              </p>
+              <p class="pill" aria-label="Caption">
+                Voicing new perspectives for global mental health.
+              </p>
             </div>
           </article>
         </div>
       </section>
 
-      <!-- Full width image (Global Keynote Speaker) -->
-      <section class="container" aria-label="Global Keynote Speaker">
-        <figure class="media-wide banner-overlay">
-          <img src="assets/hero-stage.jpg" alt="Global keynote speaker on stage" style="aspect-ratio: 16/6; object-fit: cover" loading="lazy" />
-        </figure>
-      </section>
-
       <!-- Signature Speaking Topics -->
       <section class="container intro" aria-labelledby="topicsTitle">
-        <h2 id="topicsTitle" class="section-title">Signature Speaking Topics</h2>
-        <p class="subtitle">Aligning with the United Nations Sustainable Development Goals (SDGs)</p>
+        <h2 id="topicsTitle" class="section-title">
+          Signature Speaking Topics
+        </h2>
+        <p class="subtitle">
+          Aligning with the United Nations Sustainable Development Goals (SDGs)
+        </p>
         <div class="topics-grid">
           <article class="topic-card">
             <h3>For Global & Corporate Audiences</h3>
             <ul>
-              <li>The Gift of Polarity — why both stability and struggle shape resilient leaders. <span class="pill sdg sdg-3" aria-label="SDG 3">SDG 3</span></li>
-              <li>From Classroom to Boardroom — lessons from parenting and education that transform work organizational culture. <span class="pill sdg sdg-8" aria-label="SDG 8">SDG 8</span></li>
+              <li>
+                The Gift of Polarity — why both stability and struggle shape
+                resilient leaders.
+                <span class="pill sdg sdg-3" aria-label="SDG 3">SDG 3</span>
+              </li>
+              <li>
+                From Classroom to Boardroom — lessons from parenting and
+                education that transform work organizational culture.
+                <span class="pill sdg sdg-8" aria-label="SDG 8">SDG 8</span>
+              </li>
             </ul>
           </article>
 
           <article class="topic-card">
             <h3>For Educators & Enrichment Leaders</h3>
             <ul>
-              <li>Igniting Creativity in Structured Classrooms — how to spark teaching innovation so to instil global citizenship. <span class="pill sdg sdg-17" aria-label="SDG 17">SDG 17</span></li>
-              <li>Teacher–Parent Synergy — how to get parents to be your partner instead as judges. <span class="pill sdg sdg-3" aria-label="SDG 3">SDG 3</span></li>
+              <li>
+                Igniting Creativity in Structured Classrooms — how to spark
+                teaching innovation so to instil global citizenship.
+                <span class="pill sdg sdg-17" aria-label="SDG 17">SDG 17</span>
+              </li>
+              <li>
+                Teacher–Parent Synergy — how to get parents to be your partner
+                instead as judges.
+                <span class="pill sdg sdg-3" aria-label="SDG 3">SDG 3</span>
+              </li>
             </ul>
           </article>
 
           <article class="topic-card">
             <h3>For Parents & Communities</h3>
             <ul>
-              <li>Parent Leadership as the Hidden Key — dad and mum upgrading their 5Q MindVehicle. <span class="pill sdg sdg-5" aria-label="SDG 5">SDG 5</span></li>
-              <li>Raising Future-Ready Leaders (Without Burnout) — practical ways to nurture 5Q in children beyond exams. <span class="pill sdg sdg-4" aria-label="SDG 4">SDG 4</span></li>
+              <li>
+                Parent Leadership as the Hidden Key — dad and mum upgrading
+                their 5Q MindVehicle.
+                <span class="pill sdg sdg-5" aria-label="SDG 5">SDG 5</span>
+              </li>
+              <li>
+                Raising Future-Ready Leaders (Without Burnout) — practical ways
+                to nurture 5Q in children beyond exams.
+                <span class="pill sdg sdg-4" aria-label="SDG 4">SDG 4</span>
+              </li>
             </ul>
           </article>
         </div>
@@ -127,12 +201,38 @@
         </div>
       </section>
 
+      <!-- Full width image (Global Keynote Speaker) -->
+      <section class="container" aria-label="Global Keynote Speaker">
+        <figure class="media-wide banner-overlay">
+          <img
+            src="assets/images/sus_goal.png"
+            alt="Global keynote speaker on stage"
+            loading="lazy"
+          />
+        </figure>
+      </section>
+
       <!-- CTA -->
-      <section class="cta-banner">
+      <section class="cta-banner speaking-cta" aria-labelledby="speaking-cta-title">
         <div class="container cta-inner">
-          <h2>Invite Dr. Elaine to Your Stage</h2>
-          <div>
-            <button id="open-booking-2" class="btn btn-primary btn-lg" type="button">Book Dr. Elaine for Your Event</button>
+          <div class="speaking-cta-copy">
+            <h2 id="speaking-cta-title">Invite Dr. Elaine to Your Stage</h2>
+            <p>
+              From Asia to Europe and beyond, Dr. Elaine’s voice has inspired
+              change across cultures, sectors, and age groups. Whether you’re
+              hosting a conference, corporate training, educational summit, or
+              parent leadership event, the right message can ignite a
+              transformation that lasts long after the applause fades.
+            </p>
+          </div>
+          <div class="speaking-cta-action">
+            <button
+              id="open-booking-2"
+              class="btn btn-primary btn-lg"
+              type="button"
+            >
+              Book Dr. Elaine for Your Event
+            </button>
           </div>
         </div>
       </section>
@@ -142,4 +242,4 @@
 
     <script src="script.js"></script>
   </body>
-  </html>
+</html>
