--- a/programs.html
+++ b/programs.html
@@ -6,7 +6,10 @@
     <title>Practical & Programs — Dr Elaine Loo</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="page-programs" data-page="programs">
     <a class="skip-link" href="#main">Skip to main content</a>
@@ -21,35 +24,62 @@
             <h1 class="display">Practical & Programs</h1>
             <p class="subtitle">Where the 5Q MindVehicle™ comes alive</p>
             <p>
-              The 5Q MindVehicle™ Framework exists because the future demands more than IQ. Each program Dr. Elaine has founded is living proof of what happens when families, educators, and leaders are equipped with 5Q.
+              The 5Q MindVehicle™ Framework exists because the future demands
+              more than IQ. Each program Dr. Elaine has founded is living proof
+              of what happens when families, educators, and leaders are equipped
+              with 5Q.
             </p>
             <div class="cta-row">
-              <button id="open-booking-3" class="btn btn-primary btn-lg" type="button">Talk to us about programs</button>
+              <button
+                id="open-booking-3"
+                class="btn btn-primary btn-lg"
+                type="button"
+              >
+                Talk to us about programs
+              </button>
             </div>
           </div>
           <figure class="hero-figure" aria-label="Programs in action">
-            <img src="assets/hero-stage.jpg" alt="Workshops and speaking bringing 5Q to life" />
+            <img
+              src="assets/hero-stage.jpg"
+              alt="Workshops and speaking bringing 5Q to life"
+            />
           </figure>
         </div>
       </section>
 
       <!-- ProMizzion – Youth Leadership -->
       <section class="container intro" aria-labelledby="promizzion">
-        <h2 id="promizzion" class="section-title">ProMizzion — Youth Leadership</h2>
+        <h2 id="promizzion" class="section-title">
+          ProMizzion — Youth Leadership
+        </h2>
         <div class="about-grid">
           <article class="about-card">
             <h3>Story</h3>
-            <p>Year 2010 born to spark youth leadership, ProMizzion creates environments where teenagers transform confidence into character. By facing real challenges with guided mentorship, they learn that leadership is not about position — it’s about action and meaning.</p>
-            <h3 style="margin-top:.75rem">Milestone</h3>
-            <p>Xxxxx waiting director group</p>
-            <h3 style="margin-top:.75rem">Outcome</h3>
-            <p>Students grow into resilient, articulate leaders who carry their strengths into both school and society.</p>
-            <div class="cta-row" style="margin-top:.5rem">
-              <button id="open-booking-2" class="btn btn-ghost" type="button">Discover how to launch a ProMizzion chapter</button>
+            <p>
+              Year 2010 born to spark youth leadership, ProMizzion creates
+              environments where teenagers transform confidence into character.
+              By facing real challenges with guided mentorship, they learn that
+              leadership is not about position — it’s about action and meaning.
+            </p>
+            <h3 style="margin-top: 0.75rem">Milestone</h3>
+
+            <h3 style="margin-top: 0.75rem">Outcome</h3>
+            <p>
+              Students grow into resilient, articulate leaders who carry their
+              strengths into both school and society.
+            </p>
+            <div class="cta-row" style="margin-top: 0.5rem">
+              <button id="open-booking-2" class="btn btn-ghost" type="button">
+                Discover how to launch a ProMizzion chapter
+              </button>
             </div>
           </article>
-          <figure class="media-wide" style="margin:0">
-            <img src="assets/ph1.jpg" alt="Teens presenting projects and mentoring peers" />
+          <figure class="media-wide" style="margin: 0">
+            <img
+              src="assets/ph1.jpg"
+              alt="Teens presenting projects and mentoring peers"
+            />
             <figcaption class="cap">“Lead Beyond.”</figcaption>
           </figure>
         </div>
@@ -57,25 +87,46 @@
 
       <!-- DeEmcee – Children’s Public Speaking -->
       <section class="container intro" aria-labelledby="deemcee">
-        <h2 id="deemcee" class="section-title">DeEmcee — Children’s Public Speaking</h2>
+        <h2 id="deemcee" class="section-title">
+          DeEmcee — Children’s Public Speaking
+        </h2>
         <div class="about-grid">
-          <figure class="media-wide" style="margin:0">
-            <img src="assets/ph4.jpg" alt="DeEmcee founder addressing children and parents" />
+          <figure class="media-wide" style="margin: 0">
+            <img
+              src="assets/ph4.jpg"
+              alt="DeEmcee founder addressing children and parents"
+            />
             <figcaption class="cap">DeEmcee founder’s message.</figcaption>
           </figure>
           <article class="about-card">
             <h3>Story</h3>
-            <p>In year 2018, DeEmcee is an award‑winning public speaking franchise that transforms stage fright into stage presence. Children learn to discover their voice, speak with courage, and grow through both structured yet creative thematic setting.</p>
-            <h3 style="margin-top:.75rem">Milestone</h3>
+            <p>
+              In year 2018, DeEmcee is an award‑winning public speaking
+              franchise that transforms stage fright into stage presence.
+              Children learn to discover their voice, speak with courage, and
+              grow through both structured yet creative thematic setting.
+            </p>
+            <h3 style="margin-top: 0.75rem">Milestone</h3>
             <p>Xxxxx waiting director group</p>
-            <h3 style="margin-top:.75rem">Outcome</h3>
-            <p>Children gain confidence, parents witness transformation, and communities raise a generation ready to speak with clarity and courage as foundation of global citizenship.</p>
+            <h3 style="margin-top: 0.75rem">Outcome</h3>
+            <p>
+              Children gain confidence, parents witness transformation, and
+              communities raise a generation ready to speak with clarity and
+              courage as foundation of global citizenship.
+            </p>
             <figure class="media-wide">
-              <img src="assets/ph3.jpg" alt="Children on stage with proud parents in the audience" />
-              <figcaption class="cap">“Confidence that begins with unique voices.”</figcaption>
+              <img
+                src="assets/ph3.jpg"
+                alt="Children on stage with proud parents in the audience"
+              />
+              <figcaption class="cap">
+                “Confidence that begins with unique voices.”
+              </figcaption>
             </figure>
-            <div class="cta-row" style="margin-top:.5rem">
-              <button id="open-booking-2" class="btn btn-primary" type="button">Explore DeEmcee franchise opportunities</button>
+            <div class="cta-row" style="margin-top: 0.5rem">
+              <button id="open-booking-2" class="btn btn-primary" type="button">
+                Explore DeEmcee franchise opportunities
+              </button>
             </div>
           </article>
         </div>
@@ -83,33 +134,79 @@
 
       <!-- Parents First – Parental Education & Leadership -->
       <section class="container intro" aria-labelledby="parents-first">
-        <h2 id="parents-first" class="section-title">Parents First — Parental Education & Leadership</h2>
+        <h2 id="parents-first" class="section-title">
+          Parents First — Parental Education & Leadership
+        </h2>
         <div class="about-grid">
           <article class="about-card">
             <h3>Story</h3>
-            <p>Parenting is the first and most important form of leadership. Parents First equips mothers, fathers, and even corporate leaders with cognitive science‑informed, practical tools to strengthen their own 5Q MindVehicle — advancing humankind.</p>
-            <h3 style="margin-top:.75rem">Achievements & Milestones</h3>
+            <p>
+              Parenting is the first and most important form of leadership.
+              Parents First equips mothers, fathers, and even corporate leaders
+              with cognitive science‑informed, practical tools to strengthen
+              their own 5Q MindVehicle — advancing humankind.
+            </p>
+            <h3 style="margin-top: 0.75rem">Achievements & Milestones</h3>
             <ul>
-              <li><strong>2021 – Early Vision:</strong> Scientific and artistic parenting education; launched 4Q framework.</li>
-              <li><strong>2022 – Expansion:</strong> Introduced 5Q Course (adding UQ); listed in Britishpedia Successful People in Malaysia.</li>
-              <li><strong>2023 – Professional Certification & Awards:</strong> First Professional Certification in Parental Education (University Malaya‑accredited); ASEAN Professional Award; BabyTalk MamaPapa Award.</li>
-              <li><strong>2024 – International Accreditation & Corporate Training:</strong> 5Q Accreditation by CCE Finland; HRD Corp‑approved training provider; Launched 6Q Quantum Communication & Social Science Course.</li>
-              <li><strong>2025 – Global Excellence:</strong> CCE Finland Best Curriculum Design Innovation Award; CCE Finland Best Skill Development Centre Award; 6Q Professional Diploma accredited by CMA (UK).</li>
+              <li>
+                <strong>2021 – Early Vision:</strong> Scientific and artistic
+                parenting education; launched 4Q framework.
+              </li>
+              <li>
+                <strong>2022 – Expansion:</strong> Introduced 5Q Course (adding
+                UQ); listed in Britishpedia Successful People in Malaysia.
+              </li>
+              <li>
+                <strong>2023 – Professional Certification & Awards:</strong>
+                First Professional Certification in Parental Education
+                (University Malaya‑accredited); ASEAN Professional Award;
+                BabyTalk MamaPapa Award.
+              </li>
+              <li>
+                <strong
+                  >2024 – International Accreditation & Corporate
+                  Training:</strong
+                >
+                5Q Accreditation by CCE Finland; HRD Corp‑approved training
+                provider; Launched 6Q Quantum Communication & Social Science
+                Course.
+              </li>
+              <li>
+                <strong>2025 – Global Excellence:</strong> CCE Finland Best
+                Curriculum Design Innovation Award; CCE Finland Best Skill
+                Development Centre Award; 6Q Professional Diploma accredited by
+                CMA (UK).
+              </li>
             </ul>
-            <h3 style="margin-top:.75rem">Outcome</h3>
-            <p>Adults feel empowered, children thrive, and families break cycles of pressure with resilience and joy.</p>
-            <div class="cta-row" style="margin-top:.5rem">
-              <button id="open-booking-2" class="btn btn-ghost" type="button">Empower parents with Parents First certification</button>
+            <h3 style="margin-top: 0.75rem">Outcome</h3>
+            <p>
+              Adults feel empowered, children thrive, and families break cycles
+              of pressure with resilience and joy.
+            </p>
+            <div class="cta-row" style="margin-top: 0.5rem">
+              <button id="open-booking-2" class="btn btn-ghost" type="button">
+                Empower parents with Parents First certification
+              </button>
             </div>
           </article>
           <div>
-            <figure class="media-wide" style="margin:0 0 1rem 0">
-              <img src="assets/ph5.jpg" alt="Parents First program — workshop snapshot" />
-              <figcaption class="cap">Parents First — learning that transforms families.</figcaption>
+            <figure class="media-wide" style="margin: 0 0 1rem 0">
+              <img
+                src="assets/ph5.jpg"
+                alt="Parents First program — workshop snapshot"
+              />
+              <figcaption class="cap">
+                Parents First — learning that transforms families.
+              </figcaption>
             </figure>
-            <figure class="media-wide" style="margin:0">
-              <img src="assets/ph2.jpg" alt="Parents in workshops, certification ceremonies, collaborations" />
-              <figcaption class="cap">“When parents grow, families flourish.”</figcaption>
+            <figure class="media-wide" style="margin: 0">
+              <img
+                src="assets/ph2.jpg"
+                alt="Parents in workshops, certification ceremonies, collaborations"
+              />
+              <figcaption class="cap">
+                “When parents grow, families flourish.”
+              </figcaption>
             </figure>
           </div>
         </div>
@@ -117,25 +214,44 @@
 
       <!-- KidZutopia – Early Childhood Learning -->
       <section class="container intro" aria-labelledby="kidzutopia">
-        <h2 id="kidzutopia" class="section-title">KidZutopia — Early Childhood Learning</h2>
+        <h2 id="kidzutopia" class="section-title">
+          KidZutopia — Early Childhood Learning
+        </h2>
         <div class="about-grid">
-          <figure class="media-wide" style="margin:0">
-            <img src="assets/ph6.jpg" alt="Children in playful learning environments with bright colors" />
-            <figcaption class="cap">“Nurturing curiosity and courage in every child.”</figcaption>
+          <figure class="media-wide" style="margin: 0">
+            <img
+              src="assets/ph6.jpg"
+              alt="Children in playful learning environments with bright colors"
+            />
+            <figcaption class="cap">
+              “Nurturing curiosity and courage in every child.”
+            </figcaption>
           </figure>
           <article class="about-card">
             <h3>Story</h3>
-            <p>Childhood is the foundation of lifelong learning. KidZutopia designs early brain activation and play‑based programs that nurture curiosity, empathy, and courage in young children.</p>
-            <h3 style="margin-top:.75rem">Achievements & Awards</h3>
+            <p>
+              Childhood is the foundation of lifelong learning. KidZutopia
+              designs early brain activation and play‑based programs that
+              nurture curiosity, empathy, and courage in young children.
+            </p>
+            <h3 style="margin-top: 0.75rem">Achievements & Awards</h3>
             <ul>
               <li>Endorsed by CCE Finland.</li>
               <li>Winner of Best MamaPapa Recognition.</li>
-              <li>Recognized for innovative child‑centered approaches in early learning.</li>
+              <li>
+                Recognized for innovative child‑centered approaches in early
+                learning.
+              </li>
             </ul>
-            <h3 style="margin-top:.75rem">Outcome</h3>
-            <p>Children grow into eager learners and enter school with joy instead of fear.</p>
-            <div class="cta-row" style="margin-top:.5rem">
-              <button id="open-booking-2" class="btn btn-primary" type="button">Bring KidZutopia to your community</button>
+            <h3 style="margin-top: 0.75rem">Outcome</h3>
+            <p>
+              Children grow into eager learners and enter school with joy
+              instead of fear.
+            </p>
+            <div class="cta-row" style="margin-top: 0.5rem">
+              <button id="open-booking-2" class="btn btn-primary" type="button">
+                Bring KidZutopia to your community
+              </button>
             </div>
           </article>
         </div>
@@ -144,9 +260,17 @@
       <!-- Why It Matters -->
       <section class="container intro" aria-labelledby="why-programs">
         <h2 id="why-programs" class="section-title">Why It Matters</h2>
-        <p>These programs are not just initiatives — they are ecosystems of transformation. Together, they show how science, creativity, and human connection can equip the next generation to turn inner potential into global impact.</p>
+        <p>
+          These programs are not just initiatives — they are ecosystems of
+          transformation. Together, they show how science, creativity, and human
+          connection can equip the next generation to turn inner potential into
+          global impact.
+        </p>
         <figure class="media-wide">
-          <img src="assets/ph4.jpg" alt="Programs touching families, classrooms, and communities" />
+          <img
+            src="assets/ph4.jpg"
+            alt="Programs touching families, classrooms, and communities"
+          />
         </figure>
       </section>
 
@@ -154,7 +278,13 @@
         <div class="container cta-inner">
           <h2>Bring these programs to your school or community</h2>
           <div>
-            <button id="open-booking-2" class="btn btn-primary btn-lg" type="button">Start a conversation</button>
+            <button
+              id="open-booking-2"
+              class="btn btn-primary btn-lg"
+              type="button"
+            >
+              Start a conversation
+            </button>
           </div>
         </div>
       </section>
