--- a/connect.html
+++ b/connect.html
@@ -17,10 +17,13 @@
     <div data-include="partials/header.html"></div>
 
     <main id="main">
-      <section class="hero">
+      <section class="hero connect-hero">
         <div class="container hero-grid">
-          <div>
-            <h1 class="display">Why Connect</h1>
+          <div class="connect-hero-copy">
+            <span class="hero-tag">Collaboration Starts Here</span>
+            <h1 class="display">
+              Why <span class="hero-highlight">Connect</span>
+            </h1>
             <p class="subtitle">
               When more parents, educators, and leaders live with 5Q, the next
               generation grows stronger — not in competition, but in
@@ -44,13 +47,6 @@
               >
             </div>
           </div>
-
-          <figure class="hero-figure">
-            <img
-              src="assets/hero-stage.jpg"
-              alt="Dr Elaine speaking on stage"
-            />
-          </figure>
         </div>
       </section>
 
@@ -121,122 +117,51 @@
         </div>
       </section>
 
-      <section class="container quote">
-        <blockquote>
-          "Because together, we can turn vision into movement — and movement
-          into lasting global impact."
-        </blockquote>
-      </section>
-
-      <section class="container intro" id="contact">
-        <div class="narrow">
-          <h2 class="section-title">Enquire / Contact</h2>
-          <p class="subtitle">
-            Have a question or want to collaborate? Send us a brief enquiry and
-            we'll get back to you.
-          </p>
-
-          <form id="enquiry-form" class="enquiry-form" novalidate>
-            <div class="form-row">
-              <div>
-                <label for="enq-name">Name</label>
-                <input id="enq-name" name="name" type="text" required />
-              </div>
-              <div>
-                <label for="enq-email">Email</label>
-                <input id="enq-email" name="email" type="email" required />
-              </div>
-              <div class="full">
-                <label for="enq-org">Organization (optional)</label>
-                <input id="enq-org" name="org" type="text" />
-              </div>
-              <div class="full">
-                <label for="enq-subject">Subject</label>
-                <input id="enq-subject" name="subject" type="text" required />
-              </div>
-              <div class="full">
-                <label for="enq-message">Message</label>
-                <textarea id="enq-message" name="message" required></textarea>
-              </div>
+      <section class="engage" aria-labelledby="engage-title">
+        <div class="container engage-inner">
+          <div class="engage-header">
+            <h2 id="engage-title" class="section-title">Let’s Make It Happen</h2>
+            <div class="cta-row">
+              <a
+                class="btn btn-primary"
+                href="mailto:info@drelaineloo.com?subject=Collaboration"
+                >📧 Email: info@drelaineloo.com</a
+              >
+              <a
+                class="btn btn-ghost"
+                href="https://www.drelaineloo.com"
+                target="_blank"
+                rel="noopener"
+                >🌐 Website: www.drelaineloo.com</a
+              >
             </div>
-
-            <div class="modal-actions">
-              <button type="reset" class="btn btn-ghost">Reset</button>
-              <button type="submit" class="btn btn-primary">
-                Send Enquiry
-              </button>
-            </div>
-          </form>
-        </div>
-      </section>
-
-      <section class="cta-banner">
-        <div class="container cta-inner">
-          <h2 class="grad">Let’s Make It Happen</h2>
-          <div>
-            <a
-              class="btn btn-primary"
-              href="mailto:info@drelaineloo.com?subject=Collaboration"
-              >📧 Email: info@drelaineloo.com</a
-            >
-            <a
-              class="btn btn-ghost"
-              href="https://www.drelaineloo.com"
-              target="_blank"
-              rel="noopener"
-              >🌐 www.drelaineloo.com</a
-            >
           </div>
-        </div>
-      </section>
-    </main>
 
-    <!-- combined contact information section -->
-    <section class="container contact-info">
-      <div class="narrow">
-        <div class="contact-grid">
-          <div class="follow">
+          <div class="engage-follow">
             <h3 class="section-title">Follow &amp; Engage</h3>
-            <p class="muted">
-              Stay connected for updates, events and thought leadership.
-            </p>
             <ul class="social-list">
               <li>
                 <strong>Facebook</strong> – Impact stories &amp; live updates
               </li>
-              <li><strong>Instagram</strong> – Behind-the-scenes and events</li>
+              <li>
+                <strong>Instagram</strong> – Behind-the-scenes and events
+              </li>
               <li>
                 <strong>LinkedIn</strong> – Research, thought leadership &amp;
                 professional collaborations
               </li>
             </ul>
           </div>
-
-          <div class="contact-cta">
-            <h3 class="section-title">Let’s make it happen</h3>
-            <p class="intro">📩 Book a Strategic Collaboration Call →</p>
-            <div class="cta-row">
-              <button
-                id="open-booking-3"
-                class="btn btn-primary btn-lg"
-                type="button"
-              >
-                📩 Book a Strategic Collaboration Call
-              </button>
-              <a
-                class="btn btn-ghost"
-                href="mailto:info@drelaineloo.com?subject=Collaboration"
-                >📧 Email</a
-              >
-            </div>
-            <blockquote class="muted" style="margin-top: 1rem">
-              Because together, we can turn vision into movement — and movement
-              into lasting global impact.
-            </blockquote>
-          </div>
         </div>
-      </div>
-    </section>
+      </section>
+
+      <section class="container quote">
+        <blockquote>
+          "Because together, we can turn vision into movement — and movement
+          into lasting global impact."
+        </blockquote>
+      </section>
+    </main>
 
     <div data-include="partials/footer.html"></div>
 
