--- a/research_publication.html
+++ b/research_publication.html
@@ -6,7 +6,10 @@
     <title>Research & Publications — Dr Elaine Loo</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="page-research" data-page="research">
     <a class="skip-link" href="#main">Skip to main content</a>
@@ -21,7 +24,9 @@
             <h1 class="display">Research & Publications</h1>
             <p class="subtitle">Research Focus</p>
             <p>
-              Dr. Elaine’s research explores how humans can thrive in the age of AI — not by competing with machines, but by deepening what makes us human.
+              Dr. Elaine’s research explores how humans can thrive in the age of
+              AI — not by competing with machines, but by deepening what makes
+              us human.
             </p>
             <ul>
               <li>The 5Q MindVehicle™ Framework</li>
@@ -29,18 +34,27 @@
               <li>Parental education & identity transformation</li>
               <li>Speaking confidence & self-expression</li>
             </ul>
-            <div class="badge-row" style="margin-top:.5rem">
+            <div class="badge-row" style="margin-top: 0.5rem">
               <span class="pill">5Q MindVehicle Framework</span>
               <span class="pill">Adult leadership</span>
               <span class="pill">Parental Education</span>
               <span class="pill">Speaking Confidence</span>
             </div>
-            <div class="cta-row" style="margin-top:1rem">
-              <button id="open-booking-3" class="btn btn-primary btn-lg" type="button">Collaborate on Research</button>
+            <div class="cta-row" style="margin-top: 1rem">
+              <button
+                id="open-booking-3"
+                class="btn btn-primary btn-lg"
+                type="button"
+              >
+                Collaborate on Research
+              </button>
             </div>
           </div>
           <figure class="hero-figure">
-            <img src="assets/hero-stage.jpg" alt="Research, stage, and community impact" />
+            <img
+              src="assets/images/publication_newspaper.jpg"
+              alt="Research, stage, and community impact"
+            />
           </figure>
         </div>
       </section>
@@ -49,24 +63,77 @@
       <section class="container intro" aria-labelledby="unesco">
         <h2 id="unesco" class="section-title">Current UNESCO Project</h2>
         <div class="about-grid">
-          <article class="about-card">
-            <p>
-              As UNESCO Chair on AI-Supported Digital Platforms in Education and Healthcare at LUT University and Professor Emeritus at the University of Jyväskylä, <strong>Pekka Neittaanmäki</strong> aligns the project initiative “<em>AI-Supported Digital Platforms in Parental Education and Mental Healthcare</em>.”
-            </p>
-            <p>In his scholarly capacity as Chairholder, he supports the research dimensions of this project. Specifically endorsing its potential to:</p>
-            <ul>
-              <li>Advance comparative research linking Malaysia and Finland on reflective cognition, digital ecosystems, and parental well-being;</li>
-              <li>Generate evidence-based insights to inform national policy and international discussions on AI in education and healthcare;</li>
-              <li>Contribute to UNESCO’s mission of inclusive, human-centered digital transformation.</li>
-            </ul>
-            <p>
-              He encourages academic partners, policymakers, and community stakeholders to collaborate with Dr. Elaine on developing the research aspects of this initiative — with implementation led by local partners in Malaysia to contribute valuable knowledge to the global dialogue on parental well-being and digital innovation.
-            </p>
+          <article class="about-card endorsement-card">
+            <div class="endorsement-header">
+              <span class="badge">UNESCO Chair Endorsement</span>
+              <h3>Prof. Pekka Neittaanmäki</h3>
+              <p class="endorsement-role">
+                UNESCO Chair on AI-Supported Digital Platforms in Education
+                &amp; Healthcare, LUT University · Professor Emeritus,
+                University of Jyväskylä
+              </p>
+            </div>
+
+            <div class="endorsement-body">
+              <p class="endorsement-lead">
+                “<strong>Pekka Neittaanmäki</strong> aligns and endorses our
+                initiative
+                <em
+                  >AI-Supported Digital Platforms in Parental Education and
+                  Mental Healthcare</em
+                >, highlighting its capacity to advance inclusive,
+                human-centered innovation.”
+              </p>
+
+              <div class="endorsement-highlight">
+                <span class="tag">Key impacts he champions</span>
+                <ul class="endorsement-list">
+                  <li>
+                    Advance comparative research linking Malaysia and Finland on
+                    reflective cognition, digital ecosystems, and parental
+                    wellbeing.
+                  </li>
+                  <li>
+                    Generate evidence-based insights that inform national policy
+                    and international discussions on AI in education and
+                    healthcare.
+                  </li>
+                  <li>
+                    Contribute to UNESCO’s mission of inclusive, human-centered
+                    digital transformation.
+                  </li>
+                </ul>
+              </div>
+
+              <p>
+                Prof. Neittaanmäki invites academic partners, policymakers, and
+                community leaders to collaborate with Dr. Elaine in developing
+                the research dimensions, while Malaysian partners lead
+                implementation that feeds valuable knowledge back into the
+                global dialogue on parental wellbeing and digital innovation.
+              </p>
+            </div>
           </article>
-          <figure class="media-wide" style="margin:0">
-            <img src="assets/ph6.jpg" alt="UNESCO project, collaboration between Malaysia and Finland" />
-            <figcaption class="cap">Human-centered research for families and communities.</figcaption>
-          </figure>
+          <div class="media-stack">
+            <figure class="media-wide" style="margin: 0">
+              <img
+                src="assets/images/Flag_of_UNESCO.png"
+                alt="UNESCO project, collaboration between Malaysia and Finland"
+              />
+              <figcaption class="cap">
+                Human-centered research for families and communities.
+              </figcaption>
+            </figure>
+            <figure class="media-wide" style="margin: 0">
+              <img
+                src="assets/images/unnamed.png"
+                alt="Cross-national collaboration session"
+              />
+              <figcaption class="cap">
+                Malaysia–Finland collaboration: translating science into impact.
+              </figcaption>
+            </figure>
+          </div>
         </div>
       </section>
 
@@ -75,12 +142,36 @@
         <h2 id="publications" class="section-title">Publications</h2>
         <div class="pub-grid">
           <article class="pub-card">
-            <h3>(2024) The Effect of 5Q Parental Education on Children’s Emotion through Healing of Inner Child among Parents</h3>
-            <p class="muted">Key insight: equipping parents with self-advancement tools creates measurable improvements in children’s emotional health.</p>
+            <figure class="pub-figure">
+              <img
+                src="assets/images/prison_parent_book.png"
+                alt="5Q parental education research"
+              />
+            </figure>
+            <h3>
+              (2024) The Effect of 5Q Parental Education on Children’s Emotion
+              through Healing of Inner Child among Parents
+            </h3>
+            <p class="muted">
+              Key insight: equipping parents with self-advancement tools creates
+              measurable improvements in children’s emotional health.
+            </p>
           </article>
           <article class="pub-card">
-            <h3>PhD Thesis (University of Malaya): Establishing Codes from Exemplary Teacher Practices in Character Education</h3>
-            <p class="muted">Key insight: mapping how teachers embed values and resilience into daily practices provides a blueprint for global citizenship.</p>
+            <figure class="pub-figure">
+              <img
+                src="assets/images/publication_newspaper.jpg"
+                alt="Thesis on exemplary teacher practices"
+              />
+            </figure>
+            <h3>
+              PhD Thesis (University of Malaya): Establishing Codes from
+              Exemplary Teacher Practices in Character Education
+            </h3>
+            <p class="muted">
+              Key insight: mapping how teachers embed values and resilience into
+              daily practices provides a blueprint for global citizenship.
+            </p>
           </article>
         </div>
       </section>
@@ -90,57 +181,108 @@
         <h2 id="books" class="section-title">Books</h2>
         <div class="book-grid">
           <article class="book-card">
+            <figure class="book-figure">
+              <img
+                src="assets/images/prison_child_book.png"
+                alt="Prison Child book cover"
+              />
+            </figure>
             <h3>Prison Child</h3>
-            <p>A stirring journey into the silent struggles of children in achievement-driven families, revealing how emotional imprisonment shapes adulthood.</p>
-            <div class="badge-row"><span class="pill">100,000+ copies sold</span></div>
+            <p>
+              A stirring journey into the silent struggles of children in
+              achievement-driven families, revealing how emotional imprisonment
+              shapes adulthood.
+            </p>
+            <div class="badge-row">
+              <span class="pill">100,000+ copies sold</span>
+            </div>
           </article>
           <article class="book-card">
+            <figure class="book-figure">
+              <img
+                src="assets/images/prison_parent_book.png"
+                alt="Prison Parent book cover"
+              />
+            </figure>
             <h3>Prison Parent</h3>
-            <p>A powerful reflection on intergenerational pressure and how parents can reclaim their voices while raising thriving children.</p>
-            <div class="badge-row"><span class="pill">Used in education programs</span></div>
+            <p>
+              A powerful reflection on intergenerational pressure and how
+              parents can reclaim their voices while raising thriving children.
+            </p>
+            <div class="badge-row">
+              <span class="pill">Used in education programs</span>
+            </div>
           </article>
         </div>
 
-        <figure class="media-wide" style="margin-top:1rem">
-          <img src="assets/ph4.jpg" alt="Readers and workshops using the books" />
-          <figcaption class="cap">Books now used in parent education, teacher training, and coaching groups.</figcaption>
-        </figure>
-
-        <div class="cta-row" style="margin-top:1rem">
-          <a class="btn btn-ghost" href="https://www.facebook.com/drelaineloo/posts/pfbid0oidqqFrjjHAbULCA5TSM4AMC4VWgM8FdZn7L1ngCovnvVMQvhVymdoNYtrBQ6G25l" target="_blank" rel="noopener">See post: 100,000 books</a>
+        <div class="cta-row" style="margin-top: 1rem">
+          <a
+            class="btn btn-ghost"
+            href="https://www.facebook.com/drelaineloo/posts/pfbid0oidqqFrjjHAbULCA5TSM4AMC4VWgM8FdZn7L1ngCovnvVMQvhVymdoNYtrBQ6G25l"
+            target="_blank"
+            rel="noopener"
+            >See post: 100,000 books</a
+          >
         </div>
-
-        <figure class="media-wide" style="margin-top:1rem">
-          <div class="video-embed">
-            <iframe
-              src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F1BDfcKMeyh%2F&show_text=false&width=1280"
-              title="Books highlight video"
-              allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </figure>
       </section>
 
       <!-- Why It Matters -->
       <section class="container intro" aria-labelledby="matters">
         <h2 id="matters" class="section-title">Why It Matters</h2>
-        <p>For Dr. Elaine, research is not meant to stay in paper. It must touch families, classrooms, and communities. Every study, framework, and publication is built with one aim: to turn inner potential into global impact.</p>
-        <figure class="media-wide">
-          <img src="assets/ph2.jpg" alt="Scholarly work reaching communities" />
-          <figcaption class="cap">“Scholarship that serves society.”</figcaption>
+        <p>
+          For Dr. Elaine, research is not meant to stay in paper. It must touch
+          families, classrooms, and communities. Every study, framework, and
+          publication is built with one aim: to turn inner potential into global
+          impact.
+        </p>
+
+        <figure class="media-wide" style="margin-top: 1rem">
+          <div class="video-embed">
+            <video controls preload="metadata">
+              <source
+                src="assets/video/video_publication.mp4"
+                type="video/mp4"
+              />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+
+          <figcaption class="cap">
+            “Scholarship that serves society.”
+          </figcaption>
         </figure>
-        <div class="cta-row" style="margin-top:.5rem">
-          <a class="btn btn-ghost" href="https://www.facebook.com/share/p/15w6ETNTVj/" target="_blank" rel="noopener">Open reference</a>
+
+        <div class="cta-row" style="margin-top: 0.5rem">
+          <a
+            class="btn btn-ghost"
+            href="https://www.facebook.com/share/p/15w6ETNTVj/"
+            target="_blank"
+            rel="noopener"
+            >Open reference</a
+          >
         </div>
       </section>
 
       <!-- CTA -->
-      <section class="cta-banner">
+      <section class="cta-banner research-cta" aria-labelledby="research-cta-title">
         <div class="container cta-inner">
-          <h2>Collaborate on Research</h2>
-          <div>
-            <button id="open-booking-2" class="btn btn-primary btn-lg" type="button">Collaborate with Dr. Elaine</button>
+          <div class="research-cta-copy">
+            <h2 id="research-cta-title">Collaborate on Research</h2>
+            <p>
+              If you are a university, research institute, or global education
+              alliance seeking a partner in pioneering human-centered research,
+              collaborate with Dr. Elaine to co-create studies, frameworks, and
+              policy impact.
+            </p>
+          </div>
+          <div class="research-cta-action">
+            <button
+              id="open-booking-2"
+              class="btn btn-primary btn-lg"
+              type="button"
+            >
+              Collaborate with Dr. Elaine
+            </button>
           </div>
         </div>
       </section>
